--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <body>
 
     <div class="container">
-        <img src="./Gemini_Generated_Image_rocxb5rocxb5rocx.png" alt="Salah Khafaga" class="profile-img">
+        <img src="./WhatsApp Image 2026-01-06 at 13.22.26_18f4ada4.jpg" alt="Salah Khafaga" class="profile-img">
         
         <h1>Salah Khafaga</h1>
         <p class="title">Machine Learning Engineer | Instructor</p>
